--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,9 @@ script:
   - npm test
 after_script:
   - npm run coveralls
-
+env:
+  global:
+    - DEBUG=0
+    - secure: rH4/tVmLikMeGMjGfBZla1lyQn+E7FAW6T3matab6FJIB095Cg+v1Knp100S+7wWsrwjDmTNSD4IP+xUKYyXYCmSWEUNsyZsLtdf4gnkoHPTSAxv9wS9MIEFnhqhuHKg+KML+X6Y58VM3ShobPn4Q0/uRfGLUiOvEcEB31UMP7I=
+    - secure: VDzHVP3jp+licROM11CyiGlAeJUPyv6ooS8v0zLhnpRQMm/GVESIbOBDy7bdFdisj9UT+jG9+yf5hq/WUmnNhC0V5rQeoYNwyITPgWqxi9/rGoBNAH3jGIatmNkZ4P4zFL+659qeWxECLgzGoTeGPQfBmLi+b5/stlBHpGNTwCM=
+    - secure: RAp9qvzTaLiUv5qyWy0Dp9LHjY1hFOKQtxQ6jgvbcczxxLmBU1+9p9Q7DnPVO68ABJwDS87HmQBKha7wuEwmpwUl6/8pfG67EC3gzaWY9gOt5dpjPX67O4SXVN+OyDBt76Jy5mtUTf4F1cbetS63WdE9sZvfBrJBd3ezC094sDo=
